# ImageProcess

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  test_modal_ui.md  test_preprocessing.md  todolist.md
.claude/: settings.local.json
docs/: PROJECT_SUMMARY.md
examples/: README.md
include/: ArgumentParser.h  CleanUp.h  ImageProcessingApp.h  ImageProcessor.h  ImageUtils.h  Measurements.h  Morphology.h  PreProcessing.h  Segmentation.h  UIComponents.h
src/: CleanUp.cpp  ImageProcessingApp.cpp  ImageProcessingApp.h  ImageProcessor.cpp  ImageProcessor.h  Measurements.cpp  Morphology.cpp  PreProcessing.cpp  Segmentation.cpp  UIComponents.cpp  main.cpp
src/algorithms/: edge_detector.cpp  grayscale_converter.cpp  image_blur.cpp  particle_analysis.cpp
src/utils/: ArgumentParser.cpp  ImageUtils.cpp
